# CoEngineer.AppStack.GVN

./: .gitignore  PACKAGESTATUS.md  README.md  custodian_guide.md  protocols.md  pyproject.toml  studio_thesis.md
.github/workflows/: main.yml
examples/: oyster-mushroom.py
kit/: .gitignore  pyproject.toml
kit/.streamlit/: secrets.toml
kit/examples/: streamlit_app.py
kit/src/coengineer/: __init__.py  config.py  engine.py
kit/src/coengineer_appstack_gvn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reference-implementation/ingestion/: sync_docs.py
src/coengineer/: __init__.py
