[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coengineer-appstack-gvn"
version = "0.1.0"
description = "A modular RAG-based stack for Agri-Venture Studio applications."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Min Thu Khaing" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-cloud-aiplatform>=1.70.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30.0"]

[tool.setuptools.packages.find]
where = ["src"]
