[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coengineer-appstack-gvn"
version = "0.1.0"
authors = [
  { name="Min Thu Khaing", email="your-email@example.com" },
]
description = "Modular RAG stack for Agri-Venture Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform>=1.70.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30.0"]

[tool.setuptools.packages.find]
where = ["src"]